Use numpy 1.21.6 when building binaries for Python 3.{6,7,8,9}

--- a/.github/workflows/release_binary.yml
+++ b/.github/workflows/release_binary.yml
@@ -53,6 +53,7 @@ jobs:
           ls -l /opt/python/
           export PATH=/opt/python/${{ matrix.pythonpath }}/bin:$PATH
           pip3 install six auditwheel twine
+          pip3 install numpy==1.21.6
 
           if [ -f requirements.txt ]; then
              pip3 install -r requirements.txt
